--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-es6-promise": "^1.0.0",
     "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
