--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "clipboard-js": "^0.3.2",
     "debounce": "^1.0.0",
+    "deep-equal": "^1.0.1",
     "font-awesome": "^4.7.0",
+    "history": "^4.5.1",
     "markov-strings": "^1.3.2",
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
