--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.2",
     "react-headroom": "^2.1.3",
+    "react-more": "^1.2.0",
     "react-tap-event-plugin": "^2.0.1",
     "reselect": "^2.5.4"
   },
