--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^3.9.2",
     "react-headroom": "^2.1.3",
     "react-more": "^1.2.0",
+    "react-portal-tooltip": "^1.1.5",
     "react-tap-event-plugin": "^2.0.1",
     "reselect": "^2.5.4"
   },
