--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-native": "1.9.1",
     "babel-runtime": "^6.20.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "file-loader": "^0.9.0",
