--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markovy-online",
+  "name": "reviewer-suggestions",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
