--- a/client/package.json
+++ b/client/package.json
@@ -21,13 +21,14 @@
     "history": "^4.5.1",
     "markov-strings": "^1.3.2",
     "material-ui": "^0.16.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "radium": "^0.18.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-dropzone": "^3.9.2",
     "react-headroom": "^2.1.3",
     "react-more": "^1.2.0",
     "react-portal-tooltip": "^1.1.5",
-    "react-split-pane": "^0.1.59",
+    "react-split-pane": "^0.1.63",
     "react-tap-event-plugin": "^2.0.1",
     "reselect": "^2.5.4",
     "whatwg-fetch": "^2.0.3"
