show all of the related manuscripts

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -8,3 +8,8 @@ user: reviewer_suggestions_user
 password: password
 host: localhost
 port: 5432
+
+[client]
+# all of client properties will be exposed to the browser,
+# do not include sensitive information
+chart_show_all_manuscripts: true
