make valid decisions and manuscript types configurable

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -2,6 +2,10 @@
 #host: 0.0.0.0
 #port: 8080
 
+[model]
+valid_decisions: Accept Full Submission, Auto-Accept
+valid_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance
+
 [database]
 name: reviewer_suggestions_db
 user: reviewer_suggestions_user
