--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --progress --colors --hot --inline --host 0.0.0.0 --port 8081",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js --progress --colors --hot --inline --host 0.0.0.0 --port 8081",
     "start:prod": "http-server docs",
     "bundle": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
