include rejected manuscripts for reviewers; but  only published manuscript for authors

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -3,8 +3,10 @@
 #port: 8080
 
 [model]
-valid_decisions: Accept Full Submission, Auto-Accept
+valid_decisions: Accept Full Submission, Auto-Accept, Reject Full Submission, Revise Full Submission
 valid_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance
+published_decisions: Accept Full Submission, Auto-Accept
+published_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance
 
 [database]
 name: reviewer_suggestions_db
