include crossref type and null decission

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -4,9 +4,9 @@
 
 [model]
 valid_decisions: Accept Full Submission, Auto-Accept, Reject Full Submission, Revise Full Submission
-valid_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance
+valid_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance, journal-article
 published_decisions: Accept Full Submission, Auto-Accept
-published_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance
+published_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance, journal-article
 
 [database]
 name: reviewer_suggestions_db
