don't filter by subject area when searching by manuscript no

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -7,6 +7,7 @@ valid_decisions: Accept Full Submission, Auto-Accept, Reject Full Submission, Re
 valid_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance, journal-article
 published_decisions: Accept Full Submission, Auto-Accept
 published_manuscript_types: Research Article, Short Report, Tools and Resources, Research Advance, journal-article
+filter_by_subject_area_enabled: false
 
 [database]
 name: reviewer_suggestions_db
