--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-split-pane": "^0.1.63",
     "react-tap-event-plugin": "^2.0.1",
     "reselect": "^2.5.4",
+    "trace-error": "0.0.7",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
