integrated Auth0 client side

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -20,3 +20,5 @@ port: 5432
 # all of client properties will be exposed to the browser,
 # do not include sensitive information
 chart_show_all_manuscripts: true
+#auth0_domain: <Auth0 domain>
+#auth0_client_id: <Auth0 client id>
