--- a/app-example.cfg
+++ b/app-example.cfg
@@ -16,6 +16,12 @@ password: password
 host: localhost
 port: 5432
 
+[storage]
+#xml_dump_bucket:
+
+#ecr_bucket:
+#ecr_prefix:
+
 [client]
 # all of client properties will be exposed to the browser,
 # do not include sensitive information
