--- a/app-example.cfg
+++ b/app-example.cfg
@@ -22,6 +22,13 @@ port: 5432
 #ecr_bucket:
 #ecr_prefix:
 
+#editors_bucket:
+#editors_prefix:
+
+[auth]
+#valid_emails: ../.data/generated-config/emails.lst
+
+
 [client]
 # all of client properties will be exposed to the browser,
 # do not include sensitive information
