added configuration option for valid domains

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -27,7 +27,7 @@ port: 5432
 
 [auth]
 #valid_emails: ../.data/generated-config/emails.lst
-
+#valid_domains:
 
 [client]
 # all of client properties will be exposed to the browser,
