make data path configurable

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -25,6 +25,9 @@ port: 5432
 #editors_bucket:
 #editors_prefix:
 
+[data]
+#data_root: ../.data
+
 [auth]
 #valid_emails: ../.data/generated-config/emails.lst
 #valid_domains:
