renamed valid_domains to valid_email_domains

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -30,7 +30,7 @@ port: 5432
 
 [auth]
 #valid_emails: ../.data/generated-config/emails.lst
-#valid_domains:
+#valid_email_domains:
 
 [client]
 # all of client properties will be exposed to the browser,
