--- a/app-example.cfg
+++ b/app-example.cfg
@@ -31,6 +31,7 @@ port: 5432
 [auth]
 #valid_emails: ../.data/generated-config/emails.lst
 #valid_email_domains:
+#allowed_ips: 127.0.0.1
 
 [client]
 # all of client properties will be exposed to the browser,
