implemented rate limit

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -16,6 +16,13 @@ password: password
 host: localhost
 port: 5432
 
+[pipeline]
+# max_workers: 15
+
+[crossref]
+# rate_limit_count: 50
+# rate_limit_interval_sec: 1
+
 [storage]
 #xml_dump_bucket:
 
