implemented request retries for crossref downloads

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -22,6 +22,8 @@ port: 5432
 [crossref]
 # rate_limit_count: 50
 # rate_limit_interval_sec: 1
+# max_retries: 10
+# retry_on_status_codes: 429, 500, 502, 503, 504
 
 [storage]
 #xml_dump_bucket:
