--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ SQLAlchemy==1.2.2
 Flask==0.12.2
 Flask-Cors==3.0.3
 gensim==3.3.0
+lxml==4.1.1
 pyLDAvis==2.1.1
 pytest==3.4.0
 pytest-watch==4.1.0
