--- a/.pylintrc
+++ b/.pylintrc
@@ -10,3 +10,11 @@ disable=C0111,C0103,W0108,E1101,C0330,I0011,C0131,C1801,E1002
 [TYPECHECK]
 ignored-modules=shared_proxy
 extension-pkg-whitelist=lxml
+
+[SIMILARITIES]
+
+# Minimum lines number of a similarity.
+min-similarity-lines=6
+
+# Ignore imports when computing similarities.
+ignore-imports=yes
