import editor roles with keywords csv

--- a/app-example.cfg
+++ b/app-example.cfg
@@ -34,6 +34,9 @@ port: 5432
 #editors_bucket:
 #editors_prefix:
 
+#editor_roles_and_keywords_bucket:
+#editor_roles_and_keywords_prefix:
+
 [data]
 #data_root: .data
 
