change config to match naming in api (required_role instead of require_role)

--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -1,12 +1,12 @@
 
 [search:reviewer]
 filter_by_role:
-require_role:
+required_role:
 
 [search:reviewing_editor]
 filter_by_role: Reviewing Editor
-require_role: Senior Editor
+required_role: Senior Editor
 
 [search:senior_editor]
 filter_by_role: Senior Editor
-require_role: Senior Editor
+required_role: Senior Editor
