added search type drop down, resolves #138

--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -1,12 +1,14 @@
-
 [search:reviewer]
+title: Reviewer
 filter_by_role:
 required_role:
 
 [search:reviewing_editor]
+title: Reviewing Editor
 filter_by_role: Reviewing Editor
 required_role: Senior Editor
 
 [search:senior_editor]
+title: Senior Editor
 filter_by_role: Senior Editor
 required_role: Senior Editor
