--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -2,13 +2,19 @@
 title: Reviewer
 filter_by_role:
 required_role:
+recommend_relationship_types: author
+recommend_stage_names: Review Received
 
 [search:reviewing_editor]
 title: Reviewing Editor
 filter_by_role: Reviewing Editor
 required_role: Senior Editor
+recommend_relationship_types: author, editor
+recommend_stage_names: Review Received
 
 [search:senior_editor]
 title: Senior Editor
 filter_by_role: Senior Editor
 required_role: Senior Editor
+recommend_relationship_types: author, editor, senior_editor
+recommend_stage_names: Review Received
