--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,8 @@
   "author": "Daniel Ecer",
   "license": "MIT",
   "dependencies": {
-    "auth0-js": "^8.9.2",
-    "auth0-lock-passwordless": "^2.2.3",
+    "auth0-js": "^8.12.2",
+    "auth0-lock": "^11.2.3",
     "clipboard-js": "^0.3.2",
     "d3": "^4.7.1",
     "d3-tip": "^0.7.1",
