--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "description": "PeerScout",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js --progress --colors --hot --inline --host 0.0.0.0 --port 8081",
+    "start": "NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js --progress --colors --hot --inline --host 0.0.0.0 --port 8081",
     "start:prod": "http-server docs",
-    "bundle": "webpack --config webpack.config.js",
+    "bundle": "webpack --config webpack.config.js --mode production",
     "test": "cross-env NODE_ENV=test tape-watch -1 -r babel-register src/**/*.spec.js | faucet",
     "~test": "cross-env NODE_ENV=test tape-watch -w -r babel-register src/**/*.spec.js | faucet"
   },
@@ -16,6 +16,7 @@
     "auth0-js": "^8.12.2",
     "auth0-lock": "^11.2.3",
     "clipboard-js": "^0.3.2",
+    "create-react-class": "^15.6.3",
     "d3": "^4.7.1",
     "d3-tip": "^0.7.1",
     "debounce": "^1.0.0",
@@ -23,26 +24,25 @@
     "es6-set": "^0.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.5.1",
-    "markov-strings": "^1.3.2",
-    "material-ui": "^0.16.7",
-    "radium": "^0.18.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-dropzone": "^3.9.2",
-    "react-headroom": "^2.1.3",
+    "material-ui": "^0.20.0",
+    "prop-types": "^15.6.1",
+    "radium": "^0.22.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.8",
     "react-more": "^1.2.0",
-    "react-portal-tooltip": "^1.1.5",
+    "react-portal-tooltip": "^2.3.0",
     "react-split-pane": "^0.1.63",
-    "react-tap-event-plugin": "^2.0.1",
-    "reselect": "^2.5.4",
-    "sort-on": "^2.0.0",
+    "react-tap-event-plugin": "^3.0.2",
+    "reselect": "^3.0.1",
+    "sort-on": "^3.0.0",
     "trace-error": "0.0.7",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
-    "babel-jest": "18.0.0",
-    "babel-loader": "^6.2.10",
+    "babel-jest": "22.4.1",
+    "babel-loader": "^7.1.3",
     "babel-plugin-es6-promise": "^1.0.0",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -50,25 +50,25 @@
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-react-native": "1.9.1",
     "babel-runtime": "^6.20.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.4.2",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.10",
     "es6-promise": "^4.0.5",
     "faucet": "0.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.26.0",
-    "http-server": "^0.9.0",
-    "jest": "18.1.0",
-    "react-test-renderer": "15.4.1",
+    "file-loader": "^1.1.10",
+    "html-webpack-plugin": "^3.0.4",
+    "http-server": "^0.11.1",
+    "jest": "22.4.2",
+    "react-test-renderer": "16.2.0",
     "resize-observer-polyfill": "^1.4.1",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.20.2",
     "tape": "^4.8.0",
     "tape-watch": "^2.3.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "worker-loader": "^0.7.1"
+    "url-loader": "^0.6.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.1.0",
+    "worker-loader": "^1.1.1"
   }
 }
