added ui unit tests, resolves #153

--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,8 @@
     "start": "NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js --progress --colors --hot --inline --host 0.0.0.0 --port 8081",
     "start:prod": "http-server docs",
     "bundle": "webpack --config webpack.config.js --mode production",
-    "test": "cross-env NODE_ENV=test tape-watch -1 -r babel-register src/**/*.spec.js | faucet",
-    "~test": "cross-env NODE_ENV=test tape-watch -w -r babel-register src/**/*.spec.js | faucet"
+    "test": "cross-env NODE_ENV=test tape-watch -1 -r babel-register -r ../src/__tests__/setup.js src/**/*.spec.js | faucet",
+    "~test": "cross-env NODE_ENV=test tape-watch -w -r babel-register -r ../src/__tests__/setup.js src/**/*.spec.js | faucet"
   },
   "author": "Daniel Ecer",
   "license": "MIT",
@@ -54,12 +54,15 @@
     "copy-webpack-plugin": "^4.4.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "es6-promise": "^4.0.5",
     "faucet": "0.0.1",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "^3.0.4",
     "http-server": "^0.11.1",
     "jest": "22.4.2",
+    "jsdom": "^11.6.2",
     "react-test-renderer": "16.2.0",
     "resize-observer-polyfill": "^1.4.1",
     "style-loader": "^0.20.2",
