Move requirements-debug.txt into ci image

--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,5 +1,10 @@
 ARG commit=latest
 FROM elifesciences/peerscout:${commit}
+ENV DEBUG=1
+
+USER elife
+COPY --chown=elife:elife requirements-debug.txt ${PROJECT_FOLDER}/
+RUN venv/pip/install -r requirements-debug.txt
 
 USER root
 RUN mkdir build/ && chown www-data:www-data build/
