fix ui flakiness, resolves #155 (#156)
* moved configuration loading to separate component

* load main view only after config has been loaded

* moved authentication manager state to separate component

* moved showing login form depending on authentication state to seprate component

* moved loading of search types out of main component

* moved loading of subject areas and keywords to separate components

* moved hash history to separate component

* moved search options to separate component

* moved loading search results to separate component

* minor refactory

* fixed old chart not removed

* fixed triggering search with correct parameters

* don't call pushSearchOptions before a change happened

* handle error objects when showing an application error message

* tested and updated error handing for search results

* fixed typo

* indicate authenticating / loading state before the hash has been parsed

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start:prod": "http-server docs",
     "bundle": "webpack --config webpack.config.js --mode production",
     "test": "cross-env NODE_ENV=test tape-watch -1 -r babel-register -r ../src/__tests__/setup.js src/**/*.spec.js | faucet",
+    "test:raw": "cross-env TAP_DIAG=1 cross-env NODE_ENV=test tape-watch -1 -r babel-register -r ../src/__tests__/setup.js src/**/*.spec.js",
     "~test": "cross-env NODE_ENV=test tape-watch -w -r babel-register -r ../src/__tests__/setup.js src/**/*.spec.js | faucet"
   },
   "author": "Daniel Ecer",
@@ -34,6 +35,7 @@
     "react-portal-tooltip": "^2.3.0",
     "react-split-pane": "^0.1.63",
     "react-tap-event-plugin": "^3.0.2",
+    "recompose": "^0.26.0",
     "reselect": "^3.0.1",
     "sort-on": "^3.0.0",
     "trace-error": "0.0.7",
@@ -54,6 +56,7 @@
     "copy-webpack-plugin": "^4.4.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.10",
+    "deferred": "^0.7.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "es6-promise": "^4.0.5",
@@ -65,6 +68,7 @@
     "jsdom": "^11.6.2",
     "react-test-renderer": "16.2.0",
     "resize-observer-polyfill": "^1.4.1",
+    "sinon": "^4.4.2",
     "style-loader": "^0.20.2",
     "tape": "^4.8.0",
     "tape-watch": "^2.3.0",
