--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -4,6 +4,7 @@ filter_by_role:
 required_role:
 recommend_relationship_types: author
 recommend_stage_names: Review Received
+default_limit: 50
 
 [search:reviewing_editor]
 title: Reviewing Editor
@@ -11,6 +12,7 @@ filter_by_role: Reviewing Editor
 required_role: Senior Editor
 recommend_relationship_types: author, editor
 recommend_stage_names: Review Received
+default_limit: 5
 
 [search:senior_editor]
 title: Senior Editor
@@ -18,3 +20,4 @@ filter_by_role: Senior Editor
 required_role: Senior Editor
 recommend_relationship_types: author, editor, senior_editor
 recommend_stage_names: Review Received
+default_limit: 5
