--- a/.pylintrc
+++ b/.pylintrc
@@ -5,7 +5,7 @@ indent-after-paren=2
 [MESSAGES CONTROL]
 # Disable C0111 (docstrings) - use useful method names instead
 # Disable C0103 (invalid variable name) - in very short blocks it is okay to use generic names
-disable=C0111,C0103,W0108,E1101,C0330,I0011,C0131,C1801,E1002
+disable=C0111,C0103,W0108,E1101,C0330,I0011,C0131,C1801,E1002,no-self-use,too-few-public-methods
 
 [TYPECHECK]
 ignored-classes=scoped_session
