get crossref data for senior editors (#185)

--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -24,4 +24,4 @@ default_limit: 5
 
 [enrich-data]
 include_early_career_researcher: true
-include_roles: Reviewing Editor
+include_roles: Reviewing Editor, Senior Editor
