--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -22,6 +22,10 @@ recommend_relationship_types: author, editor, senior_editor
 recommend_stage_names: Review Received
 default_limit: 5
 
+[crossref]
+ # 30 days
+expire_after_secs: 2592000
+
 [enrich-data]
 include_early_career_researcher: true
 include_roles: Reviewing Editor, Senior Editor
