added Contacting Reviewers to recommend_stage_names (#198)

--- a/app-defaults.cfg
+++ b/app-defaults.cfg
@@ -3,7 +3,7 @@ title: Reviewer
 filter_by_role:
 required_role:
 recommend_relationship_types: author
-recommend_stage_names: Review Received
+recommend_stage_names: Review Received, Contacting Reviewers
 default_limit: 50
 
 [search:reviewing_editor]
@@ -11,7 +11,7 @@ title: Reviewing Editor
 filter_by_role: Reviewing Editor
 required_role: Senior Editor
 recommend_relationship_types: author, editor
-recommend_stage_names: Review Received
+recommend_stage_names: Review Received, Contacting Reviewers
 default_limit: 5
 
 [search:senior_editor]
@@ -19,7 +19,7 @@ title: Senior Editor
 filter_by_role: Senior Editor
 required_role: Senior Editor
 recommend_relationship_types: author, editor, senior_editor
-recommend_stage_names: Review Received
+recommend_stage_names: Review Received, Contacting Reviewers
 default_limit: 5
 
 [crossref]
