--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,15 @@
-/build
-/client/node_modules
-/client/dist
-/.coverage
-/.data
-/venv
-/.vscode
-/.pytest_cache
-/app.cfg
-/logs
-/*.egg-info
+build
+client/node_modules
+client/dist
+.coverage
+.data
+venv
+.vscode
+.pytest_cache
+app.cfg
+logs
+*.egg-info
 
 .cache
-__pycache__
-*.pyc
+**/__pycache__
+**/*.pyc
