--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -7,6 +7,6 @@ RUN mkdir /home/node/client
 WORKDIR /home/node/client
 
 COPY --chown=node:node client/package.json client/package-lock.json ./
-RUN npm install
+RUN npm ci
 
 COPY --chown=node:node client ./
