--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = peerscout
+testpaths = tests
 cache_dir = build/pytest
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
