start server via docker (#373)
* start server via docker

* run client bundle

* just copy client dist

* added update-data-and-reload target

* create .data directory if it doesn't exist

* updated README

* added unicode cache test

* updated base image to fix unicode issue due to LANG=en_US.UTF-8

* added server-test-pytest and run-preprocessing-step target

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -10,3 +10,5 @@ COPY --chown=node:node client/package.json client/package-lock.json ./
 RUN npm ci
 
 COPY --chown=node:node client ./
+
+RUN npm run bundle
