--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,10 @@ services:
       args: 
         commit: ${IMAGE_TAG}
     image: elifesciences/peerscout:${IMAGE_TAG}
-    command: /bin/sh -c exit 0
     depends_on:
       - client
+    ports:
+      - "8080:8080"
 
   peerscout-base-dev:
     build:
@@ -41,3 +42,6 @@ services:
     command: /bin/sh -c exit 0
     depends_on:
       - peerscout-base-dev
+
+volumes:
+  postgres-data:
