--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -37,5 +37,10 @@ services:
       - ./.data:/srv/peerscout/.data
       - config-aws:/home/elife/.aws
 
+  peerscout-dev:
+    volumes:
+      - ./peerscout:/srv/peerscout/peerscout
+      - ./tests:/srv/peerscout/tests
+
 volumes:
   config-aws:
