--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,6 +27,10 @@ services:
     ports:
       - "9432:5432"
 
+  client:
+    volumes:
+      - ./client/src:/home/node/client/src
+
   peerscout:
     depends_on:
       - client
