--- a/client/package.json
+++ b/client/package.json
@@ -14,36 +14,35 @@
   "author": "Daniel Ecer",
   "license": "MIT",
   "dependencies": {
-    "auth0-lock": "^11.2.3",
+    "auth0-lock": "^11.17.2",
     "clipboard-js": "^0.3.2",
     "create-react-class": "^15.6.3",
     "d3": "^4.7.1",
     "d3-tip": "^0.7.1",
-    "debounce": "^1.0.0",
-    "deep-equal": "^1.0.1",
+    "debounce": "^1.2.0",
+    "deep-equal": "^1.1.0",
     "es6-set": "^0.1.5",
     "font-awesome": "^4.7.0",
-    "history": "^4.5.1",
-    "material-ui": "^0.20.0",
-    "prop-types": "^15.6.1",
-    "radium": "^0.22.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-dropzone": "^4.2.8",
+    "history": "^4.10.1",
+    "material-ui": "^0.20.2",
+    "prop-types": "^15.7.2",
+    "radium": "^0.22.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-dropzone": "^4.3.0",
     "react-more": "^1.2.0",
-    "react-portal-tooltip": "^2.3.0",
-    "react-split-pane": "^0.1.63",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-portal-tooltip": "^2.4.7",
+    "react-split-pane": "^0.1.87",
     "recompose": "^0.26.0",
     "reselect": "^3.0.1",
     "sort-on": "^3.0.0",
     "trace-error": "0.0.7",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "22.4.1",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-es6-promise": "^1.0.0",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -52,29 +51,39 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.20.0",
-    "copy-webpack-plugin": "^4.4.2",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.10",
-    "deferred": "^0.7.9",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "es6-promise": "^4.0.5",
+    "braces": ">=2.3.1",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.1",
+    "cryptiles": ">=4.1.2",
+    "css-loader": "^0.28.11",
+    "deferred": "^0.7.11",
+    "diff": ">=3.5.0",
+    "ecstatic": ">=3.3.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "es6-promise": "^4.2.8",
     "faucet": "0.0.1",
-    "file-loader": "^1.1.10",
-    "html-webpack-plugin": "^3.0.4",
+    "file-loader": "^1.1.11",
+    "handlebars": ">=4.0.14",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "jest": "22.4.2",
-    "jsdom": "^11.6.2",
+    "js-yaml": ">=3.13.1",
+    "jsdom": "^11.12.0",
+    "mem": ">=4.0.0",
+    "merge": ">=1.2.1",
+    "randomatic": ">=3.0.0",
     "react-test-renderer": "16.2.0",
-    "resize-observer-polyfill": "^1.4.1",
-    "sinon": "^4.4.2",
-    "style-loader": "^0.20.2",
-    "tape": "^4.8.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "sinon": "^4.5.0",
+    "stringstream": ">=0.0.6",
+    "style-loader": "^0.20.3",
+    "tape": "^4.11.0",
     "tape-watch": "^2.3.0",
     "url-loader": "^0.6.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0",
+    "webpack": "^4.40.0",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0",
     "worker-loader": "^1.1.1"
   }
 }
